--- a/index.html
+++ b/index.html
@@ -2,52 +2,63 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles.css">
+
     <title>James Lepone</title>
 </head>
 
-<body>
-    <nav>
-        <div class="nav-wrapper">
-            <a href="#home" class="brand-logo">Lepone</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="#about">About</a></li>
-                <li><a href="#hacks">Hackathons</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
+<body id="body">
     <div id="home">
-        <h1>James Lepone</h1>
-        <h3>Student, Programmer, Gamer</h3>
-        <div id="padhere">
-            <a class="btn-floating btn-large waves-effect waves-light #3AB487" href="#about"><i class="material-icons">power_settings_new</i></a>
+        <div id="navbar">
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
         </div>
+        </nav>
+        <h1>James Lepone</h1>
     </div>
-    <div id="gradient"></div>
     <div id="about">
+        <BR>
         <h1>About Me</h1>
-        <p>I am a student currently attending <a href="http://bcts.bergen.org">Bergen County Academies</a> and I am really passionate about Computer Science. I have learned a few languages and dabbled in some others, as well as attending quite a few hackathons and making some awesome projects along the way.</p>
-        <h2>Projects</h2>
-        <div class="row">
-            <div class="col s12 m7">
-                <div class="card">
-                    <div class="card-small">
-                        <img src="echo.jpg">
-                        <span class="card-title">Card Title</span>
-                    </div>
-                    <div class="card-content">
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="#">This is a link</a>
-                    </div>
+        <p>I am a student currently attending <a href="http://bcts.bergen.org">Bergen County Academies</a> and I am really passionate about Computer Science. I have learned a few languages and dabbled in some others, as well as attending quite a few hackathons and making some awesome projects along the way. Also, I really like hardware like Arduino and 3D printing as well!</p>
+        <h1>Projects</h1>
+        <br>
+    </div>
+    <div id="padthisright">
+        <div id="Project1" class="container-fluid">
+            <div class="row">
+                <div class="col-md-7">
+                    <a href="http://www.jameslepone.com/moleisaunit/"><h2>Mole is a Unit Website</h2></a>
+                    <p>Made as a project for school, this small website helped me to learn how to use a variety of CSS frameworks and further refine my frontend web dev skills. The website explains how one mole of a 24 byte file would take up more than the worlds storage. This was compared to how there were many moles of zinc in a single penny, explaining how small atoms really are. Also, check it out on <a href="https://github.com/Clink123/moleisaunit">GitHub</a>.</p>
+                </div>
+                <div class="col-md-5">
+                    <img src="placeit.png">
                 </div>
             </div>
         </div>
+    </div>
+    <div id="padthisbottom"></div>
+    <div id="padthisleft">
+        <div id="Project2" class="container-fluid">
+            <div class="row">
+                <div class="col-md-5">
+                    <img src="echo.jpg">
+                </div>
+                <div class="col-md-7">
+                    <a href="https://github.com/Clink123/nerdyvalentine/"><h2>Nerdy Valentine Amazon Echo App</h2></a>
+                    <p>An Amazon Alexa app that gives the user a nerdy pickup line when asked. It is based on the Space Facts example program and was my first Amazon Alexa App. This won best application at Code Day 2016 and is currently published on the Alexa Skills store.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="padthisbottom"></div>
+
 </body>
 
 </html>
