--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#projtitle">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
         </div>
@@ -27,7 +27,7 @@
         <BR>
         <h1>About Me</h1>
         <p>I am a student currently attending <a href="http://bcts.bergen.org">Bergen County Academies</a> and I am really passionate about Computer Science. I have learned a few languages and dabbled in some others, as well as attending quite a few hackathons and making some awesome projects along the way. Also, I really like hardware like Arduino and 3D printing as well!</p>
-        <h1>Projects</h1>
+        <h1 id="projtitle">Projects</h1>
         <br>
     </div>
     <div id="padthisright">
@@ -35,7 +35,7 @@
             <div class="row">
                 <div class="col-md-7">
                     <a href="http://www.jameslepone.com/moleisaunit/"><h2>Mole is a Unit Website</h2></a>
-                    <p>Made as a project for school, this small website helped me to learn how to use a variety of CSS frameworks and further refine my frontend web dev skills. The website explains how one mole of a 24 byte file would take up more than the worlds storage. This was compared to how there were many moles of zinc in a single penny, explaining how small atoms really are. Also, check it out on <a href="https://github.com/Clink123/moleisaunit">GitHub</a>.</p>
+                    <p>Made as a project for school, this small website helped me to learn how to use a variety of CSS frameworks and further refine my frontend web dev skills. The website explains how one mole of a 24 byte file would take up more than the worlds storage. This was compared to how there were many moles of zinc in a single penny, explaining how small atoms really are. Also, check it out on <a href="http://github.com/Clink123/moleisaunit">GitHub</a>.</p>
                 </div>
                 <div class="col-md-5">
                     <img src="placeit.png">
@@ -51,14 +51,65 @@
                     <img src="echo.jpg">
                 </div>
                 <div class="col-md-7">
-                    <a href="https://github.com/Clink123/nerdyvalentine/"><h2>Nerdy Valentine Amazon Echo App</h2></a>
+                    <a href="http://github.com/Clink123/nerdyvalentine/"><h2>Nerdy Valentine Amazon Echo App</h2></a>
                     <p>An Amazon Alexa app that gives the user a nerdy pickup line when asked. It is based on the Space Facts example program and was my first Amazon Alexa App. This won best application at Code Day 2016 and is currently published on the Alexa Skills store.</p>
                 </div>
             </div>
         </div>
     </div>
     <div id="padthisbottom"></div>
-
+    <div id="padthisright">
+        <div id="Project3" class="container-fluid">
+            <div class="row">
+                <div class="col-md-7">
+                    <a href="http://github.com/Clink123/memorymashup"><h2>Memory Mashup</h2></a>
+                    <p>This is my first ever Arduino Game, which is basically a two player version of the game simon. The players take turns memorizing a pattern of lights and must repeat it. Also, check out the <a href="http://www.jameslepone.com/memorymashup/">instruction website</a>.</p>
+                </div>
+                <div class="col-md-5">
+                    <img src="memmash.png">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="padthisbottom"></div>
+    <div id="padthisleft">
+        <div id="Project4" class="container-fluid">
+            <div class="row">
+                <div class="col-md-5">
+                    <img src="gamesplatform.png">
+                </div>
+                <div class="col-md-7">
+                    <a href="http://github.com/Clink123/arduinogamesplatform"><h2>Arduino Games Platform</h2></a>
+                    <p>A versatile, easy to code and expand game platform which my team and I made 2 games for. People from around the world can build the games platform and record scores on a future web application. The idea of the project was to create an open source game platform in which many different games could be coded on it or added to it. Also, check out the <a href="http://jameslepone.com/gamesplatform/">instruction site</a>.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="padthisbottom"></div>
+    <div id="padthisright">
+        <div id="Project5" class="container-fluid">
+            <div class="row">
+                <div class="col-md-7">
+                    <a href="http://www.jameslepone.com/positivity"><h2>Positivity</h2></a>
+                    <p>Positivity is a website built for uplifting or positive thoughts. Users go on the site and can post uplifting thoughts which are placed on the main page. Users can then like the most uplifting thoughts and they will rise to the top of the page.</p>
+                </div>
+                <div class="col-md-5">
+                    <img src="pospic.jpg">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="contact">
+        <div class="row">
+            <h2>Contact</h2>
+            <a class="col-md-2 col-md-offset-3" href="mailto:jameslepone@gmail.com"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><p>Mail</p></a>
+            <a class="col-md-2" href="http://www.youtube.com/user/GeminiJets747"><span class="glyphicon glyphicon-expand" aria-hidden="true"></span><p>YouTube</p></a>
+            <a class="col-md-2" href="http://github.com/Clink123/"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span><p>GitHub</p></a>
+        </div>
+    </div>
+    <footer id="footer">
+        &copy; James Lepone 2016 | Made Using <a href="http://getbootstrap.com/">Bootstrap</a> and <a href="http://placeit.net/">Placeit</a>
+    </footer>
 </body>
 
 </html>
