--- a/index.html
+++ b/index.html
@@ -30,20 +30,6 @@
         <h1 id="projtitle">Projects</h1>
         <br>
     </div>
-    <div id="padthisright">
-        <div id="Project1" class="container-fluid">
-            <div class="row">
-                <div class="col-md-7">
-                    <a href="http://www.jameslepone.com/moleisaunit/"><h2>Mole is a Unit Website</h2></a>
-                    <p>Made as a project for school, this small website helped me to learn how to use a variety of CSS frameworks and further refine my frontend web dev skills. The website explains how one mole of a 24 byte file would take up more than the worlds storage. This was compared to how there were many moles of zinc in a single penny, explaining how small atoms really are. Also, check it out on <a href="http://github.com/Clink123/moleisaunit">GitHub</a>.</p>
-                </div>
-                <div class="col-md-5">
-                    <img src="placeit.png">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="padthisbottom"></div>
     <div id="padthisleft">
         <div id="Project2" class="container-fluid">
             <div class="row">
@@ -59,14 +45,14 @@
     </div>
     <div id="padthisbottom"></div>
     <div id="padthisright">
-        <div id="Project3" class="container-fluid">
+        <div id="Project1" class="container-fluid">
             <div class="row">
                 <div class="col-md-7">
-                    <a href="http://github.com/Clink123/memorymashup"><h2>Memory Mashup</h2></a>
-                    <p>This is my first ever Arduino Game, which is basically a two player version of the game simon. The players take turns memorizing a pattern of lights and must repeat it. Also, check out the <a href="http://www.jameslepone.com/memorymashup/">instruction website</a>.</p>
+                    <a href="http://www.jameslepone.com/moleisaunit/"><h2>Mole is a Unit Website</h2></a>
+                    <p>Made as a project for school, this small website helped me to learn how to use a variety of CSS frameworks and further refine my frontend web dev skills. The website explains how one mole of a 24 byte file would take up more than the worlds storage. This was compared to how there were many moles of zinc in a single penny, explaining how small atoms really are. Also, check it out on <a href="http://github.com/Clink123/moleisaunit">GitHub</a>.</p>
                 </div>
                 <div class="col-md-5">
-                    <img src="memmash.png">
+                    <img src="placeit.png">
                 </div>
             </div>
         </div>
@@ -87,6 +73,20 @@
     </div>
     <div id="padthisbottom"></div>
     <div id="padthisright">
+        <div id="Project3" class="container-fluid">
+            <div class="row">
+                <div class="col-md-7">
+                    <a href="http://github.com/Clink123/memorymashup"><h2>Memory Mashup</h2></a>
+                    <p>This is my first ever Arduino Game, which is basically a two player version of the game simon. The players take turns memorizing a pattern of lights and must repeat it. Also, check out the <a href="http://www.jameslepone.com/memorymashup/">instruction website</a>.</p>
+                </div>
+                <div class="col-md-5">
+                    <img id="memmash" src="memmash.png">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="padthisbottom"></div>
+    <div id="padthisleft">
         <div id="Project5" class="container-fluid">
             <div class="row">
                 <div class="col-md-7">
@@ -99,9 +99,23 @@
             </div>
         </div>
     </div>
+    <div id="padthisbottom"></div>
+    <div id="padthisright">
+        <div id="Project6" class="container-fluid">
+            <div class="row">
+                <div class="col-md-7">
+                    <h2><a href="/diopsys/index.html">Diopsys, Inc. Website Rebuild</h2></a>
+                        <p>This website was used to give new ideas and show some alternatives to Word Press (calendar and blog features) as well as show responsive website development to the company for their new website which is currently under construction. Also, check it out on <a href="https://github.com/Clink123/diopsysrebuild">GitHub</a></p>
+                </div>
+                <div class="col-md-5">
+                    <img id="diopsys" src="diopsys.png">
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="contact">
         <div class="row">
-            <h2>Contact</h2>
+            <h2 id="h2tagcontact">Contact</h2>
             <a class="col-md-2 col-md-offset-3" href="mailto:jameslepone@gmail.com"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><p>Mail</p></a>
             <a class="col-md-2" href="http://www.youtube.com/user/GeminiJets747"><span class="glyphicon glyphicon-expand" aria-hidden="true"></span><p>YouTube</p></a>
             <a class="col-md-2" href="http://github.com/Clink123/"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span><p>GitHub</p></a>
