--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
     <div id="contact">
         <div class="row">
             <h2 id="h2tagcontact">Contact</h2>
-            <a class="col-md-2 col-md-offset-3" href="mailto:jameslepone@gmail.com"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><p>Mail</p></a>
-            <a class="col-md-2" href="http://www.youtube.com/user/GeminiJets747"><span class="glyphicon glyphicon-expand" aria-hidden="true"></span><p>YouTube</p></a>
-            <a class="col-md-2" href="http://github.com/Clink123/"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span><p>GitHub</p></a>
+            <a class="col-md-1 col-md-offset-4" href="mailto:jameslepone@gmail.com"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><p>Mail</p></a>
+            <a class="col-md-1" target="_blank" href="http://www.youtube.com/user/GeminiJets747"><span class="glyphicon glyphicon-expand" aria-hidden="true"></span><p>YouTube</p></a>
+            <a class="col-md-1" target="_blank" href="http://github.com/Clink123/"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span><p>GitHub</p></a>
+            <a class="col-md-1" target="_blank" href="https://resume.creddle.io/resume/dtmmn1ybt1"><span class="glyphicon glyphicon-file" aria-hidden="true"></span><p>Resume</p></a>
         </div>
     </div>
     <footer id="footer">
