added subscribe and other fixes

--- a/index.html
+++ b/index.html
@@ -26,10 +26,38 @@
     <div id="about">
         <BR>
         <h1>About Me</h1>
-        <p>I am a student currently attending <a href="http://bcts.bergen.org">Bergen County Academies</a> and I am really passionate about Computer Science. I have learned a few languages and dabbled in some others, as well as attending quite a few hackathons and making some awesome projects along the way. Also, I really like hardware like Arduino and 3D printing as well!</p>
+        <p>I am a student currently attending <a href="http://bcts.bergen.org">Bergen County Academies</a> and I am really passionate about Computer Science. I have learned a few languages and dabbled in some others, as well as attending quite a few hackathons and making some awesome projects along the way. I also love the hardware side of computer science, and I have made a few arduino projects as well! On the hackathon side of things, I am heavily involved in the planning and execution of hackBCA, one of the largest High School hackathons in the northeast.</p>
         <h1 id="projtitle">Projects</h1>
         <br>
     </div>
+    <div id="padthisleft">
+        <div id="Project5" class="container-fluid">
+            <div class="row">
+                <div class="col-md-7">
+                    <a href="http://www.jameslepone.com/positivity"><h2>Positivity</h2></a>
+                    <p>Positivity is a website built for uplifting or positive thoughts. Users go on the site and can post uplifting thoughts which are placed on the main page. Users can then like the most uplifting thoughts and they will rise to the top of the page.</p>
+                </div>
+                <div class="col-md-5">
+                    <img src="pospic.jpg">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="padthisbottom"></div>
+    <div id="padthisright">
+        <div id="Project6" class="container-fluid">
+            <div class="row">
+                <div class="col-md-7">
+                    <h2><a href="/diopsys/index.html">Diopsys, Inc. Website Rebuild</h2></a>
+                    <p>This website was used to give new ideas and show some alternatives to Word Press (calendar and blog features) as well as show responsive website development to the company for their new website which is currently under construction. Also, check it out on <a href="https://github.com/Clink123/diopsysrebuild">GitHub</a></p>
+                </div>
+                <div class="col-md-5">
+                    <img id="diopsys" src="diopsys.png">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="padthisbottom"></div>
     <div id="padthisleft">
         <div id="Project2" class="container-fluid">
             <div class="row">
@@ -39,34 +67,6 @@
                 <div class="col-md-7">
                     <a href="http://github.com/Clink123/nerdyvalentine/"><h2>Nerdy Valentine Amazon Echo App</h2></a>
                     <p>An Amazon Alexa app that gives the user a nerdy pickup line when asked. It is based on the Space Facts example program and was my first Amazon Alexa App. This won best application at Code Day 2016 and is currently published on the Alexa Skills store.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="padthisbottom"></div>
-    <div id="padthisright">
-        <div id="Project1" class="container-fluid">
-            <div class="row">
-                <div class="col-md-7">
-                    <a href="http://www.jameslepone.com/moleisaunit/"><h2>Mole is a Unit Website</h2></a>
-                    <p>Made as a project for school, this small website helped me to learn how to use a variety of CSS frameworks and further refine my frontend web dev skills. The website explains how one mole of a 24 byte file would take up more than the worlds storage. This was compared to how there were many moles of zinc in a single penny, explaining how small atoms really are. Also, check it out on <a href="http://github.com/Clink123/moleisaunit">GitHub</a>.</p>
-                </div>
-                <div class="col-md-5">
-                    <img src="placeit.png">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="padthisbottom"></div>
-    <div id="padthisleft">
-        <div id="Project4" class="container-fluid">
-            <div class="row">
-                <div class="col-md-5">
-                    <img src="gamesplatform.png">
-                </div>
-                <div class="col-md-7">
-                    <a href="http://github.com/Clink123/arduinogamesplatform"><h2>Arduino Games Platform</h2></a>
-                    <p>A versatile, easy to code and expand game platform which my team and I made 2 games for. People from around the world can build the games platform and record scores on a future web application. The idea of the project was to create an open source game platform in which many different games could be coded on it or added to it. Also, check out the <a href="http://jameslepone.com/gamesplatform/">instruction site</a>.</p>
                 </div>
             </div>
         </div>
@@ -87,43 +87,204 @@
     </div>
     <div id="padthisbottom"></div>
     <div id="padthisleft">
-        <div id="Project5" class="container-fluid">
+        <div id="Project4" class="container-fluid">
             <div class="row">
-                <div class="col-md-7">
-                    <a href="http://www.jameslepone.com/positivity"><h2>Positivity</h2></a>
-                    <p>Positivity is a website built for uplifting or positive thoughts. Users go on the site and can post uplifting thoughts which are placed on the main page. Users can then like the most uplifting thoughts and they will rise to the top of the page.</p>
-                </div>
                 <div class="col-md-5">
-                    <img src="pospic.jpg">
+                    <img src="gamesplatform.png">
+                </div>
+                <div class="col-md-7">
+                    <a href="http://github.com/Clink123/arduinogamesplatform"><h2>Arduino Games Platform</h2></a>
+                    <p>A versatile, easy to code and expand game platform which my team and I made 2 games for. People from around the world can build the games platform and record scores on a future web application. The idea of the project was to create an open source game platform in which many different games could be coded on it or added to it. Also, check out the <a href="http://jameslepone.com/gamesplatform/">instruction site</a>.</p>
                 </div>
             </div>
         </div>
     </div>
     <div id="padthisbottom"></div>
-    <div id="padthisright">
-        <div id="Project6" class="container-fluid">
-            <div class="row">
-                <div class="col-md-7">
-                    <h2><a href="/diopsys/index.html">Diopsys, Inc. Website Rebuild</h2></a>
-                        <p>This website was used to give new ideas and show some alternatives to Word Press (calendar and blog features) as well as show responsive website development to the company for their new website which is currently under construction. Also, check it out on <a href="https://github.com/Clink123/diopsysrebuild">GitHub</a></p>
-                </div>
-                <div class="col-md-5">
-                    <img id="diopsys" src="diopsys.png">
-                </div>
-            </div>
-        </div>
-    </div>
     <div id="contact">
-        <div class="row">
+        <div class="row" id="problemrow">
             <h2 id="h2tagcontact">Contact</h2>
+            <br>
             <a class="col-md-1 col-md-offset-4" href="mailto:jameslepone@gmail.com"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><p>Mail</p></a>
             <a class="col-md-1" target="_blank" href="http://www.youtube.com/user/GeminiJets747"><span class="glyphicon glyphicon-expand" aria-hidden="true"></span><p>YouTube</p></a>
             <a class="col-md-1" target="_blank" href="http://github.com/Clink123/"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span><p>GitHub</p></a>
             <a class="col-md-1" target="_blank" href="https://resume.creddle.io/resume/dtmmn1ybt1"><span class="glyphicon glyphicon-file" aria-hidden="true"></span><p>Resume</p></a>
         </div>
+
+        <!-- BEGIN: Signup Form Manual Code from Benchmark Email Ver 2.0 ------>
+
+        <script type="text/javascript">
+            function CheckField725339(fldName, frm) {
+                if (frm[fldName].length) {
+                    for (var i = 0, l = frm[fldName].length; i < l; i++) {
+                        if (frm[fldName].type == 'select-one') {
+                            if (frm[fldName][i].selected && i == 0 && frm[fldName][i].value == '') {
+                                return false;
+                            }
+                            if (frm[fldName][i].selected) {
+                                return true;
+                            }
+                        } else {
+                            if (frm[fldName][i].checked) {
+                                return true;
+                            }
+                        };
+                    }
+                    return false;
+                } else {
+                    if (frm[fldName].type == "checkbox") {
+                        return (frm[fldName].checked);
+                    } else if (frm[fldName].type == "radio") {
+                        return (frm[fldName].checked);
+                    } else {
+                        frm[fldName].focus();
+                        return (frm[fldName].value.length > 0);
+                    }
+                }
+            }
+
+            function rmspaces(x) {
+                var leftx = 0;
+                var rightx = x.length - 1;
+                while (x.charAt(leftx) == ' ') {
+                    leftx++;
+                }
+                while (x.charAt(rightx) == ' ') {
+                    --rightx;
+                }
+                var q = x.substr(leftx, rightx - leftx + 1);
+                if ((leftx == x.length) && (rightx == -1)) {
+                    q = '';
+                }
+                return (q);
+            }
+
+            function checkfield(data) {
+                if (rmspaces(data) == "") {
+                    return false;
+                } else {
+                    return true;
+                }
+            }
+
+            function isemail(data) {
+                var flag = false;
+                if (data.indexOf("@", 0) == -1 || data.indexOf("\\", 0) != -1 || data.indexOf("/", 0) != -1 || !checkfield(data) || data.indexOf(".", 0) == -1 || data.indexOf("@") == 0 || data.lastIndexOf(".") < data.lastIndexOf("@") || data.lastIndexOf(".") == (data.length - 1) || data.lastIndexOf("@") != data.indexOf("@") || data.indexOf(",", 0) != -1 || data.indexOf(":", 0) != -1 || data.indexOf(";", 0) != -1) {
+                    return flag;
+                } else {
+                    var temp = rmspaces(data);
+                    if (temp.indexOf(' ', 0) != -1) {
+                        flag = true;
+                    }
+                    var d3 = temp.lastIndexOf('.') + 4;
+                    var d4 = temp.substring(0, d3);
+                    var e2 = temp.length - temp.lastIndexOf('.') - 1;
+                    var i1 = temp.indexOf('@');
+                    if ((temp.charAt(i1 + 1) == '.') || (e2 < 1)) {
+                        flag = true;
+                    }
+                    return !flag;
+                }
+            }
+
+            function CheckFieldD725339(fldH, chkDD, chkMM, chkYY, reqd, frm) {
+                var retVal = true;
+                var dt = validDate725339(chkDD, chkMM, chkYY, frm);
+                var nDate = frm[chkMM].value + " " + frm[chkDD].value + " " + frm[chkYY].value;
+                if (dt == null && reqd == 1) {
+                    nDate = "";
+                    retVal = false;
+                } else if ((frm[chkDD].value != "" || frm[chkMM].value != "" || frm[chkYY].value != "") && dt == null) {
+                    retVal = false;
+                    nDate = "";
+                }
+                if (retVal) {
+                    frm[fldH].value = nDate;
+                }
+                return retVal;
+            }
+
+            function validDate725339(chkDD, chkMM, chkYY, frm) {
+                var objDate = null;
+                if (frm[chkDD].value != "" && frm[chkMM].value != "" && frm[chkYY].value != "") {
+                    var mSeconds = (new Date(frm[chkYY].value - 0, frm[chkMM].selectedIndex - 1, frm[chkDD].value - 0)).getTime();
+                    var objDate = new Date();
+                    objDate.setTime(mSeconds);
+                    if (objDate.getFullYear() != frm[chkYY].value - 0 || objDate.getMonth() != frm[chkMM].selectedIndex - 1 || objDate.getDate() != frm[chkDD].value - 0) {
+                        objDate = null;
+                    }
+                }
+                return objDate;
+            }
+
+            function _checkSubmit725339(frm) {
+                if (!CheckField725339("fldfirstname", frm)) {
+                    alert("Please enter the First Name");
+                    return false;
+                }
+                if (!isemail(frm["fldEmail"].value)) {
+                    alert("Please enter the Email");
+                    return false;
+                }
+                return true;
+            }
+        </script>
+        <div align="center">
+            <form style="display:inline;" action="https://lb.benchmarkemail.com//code/lbform" method=post name="frmLB725339" accept-charset="UTF-8" onsubmit="return _checkSubmit725339(this);">
+                <input type=hidden name=successurl value="http://www.benchmarkemail.com/Code/ThankYouOptin" />
+                <input type=hidden name=errorurl value="http://lb.benchmarkemail.com//Code/Error" />
+                <input type=hidden name=token value="mFcQnoBFKMTAgiQ4F2rnvOZXUawFafLCURGOYUE%2F6Zo25INw4ATiAA%3D%3D" />
+                <input type=hidden name=doubleoptin value="" />
+                <div class=bmform_outer725339 id=tblFormData725339>
+                    <div class=bmform_inner725339>
+                        <div class=bmform_head725339 id=tdHeader725339>
+                            <div class=bm_headetext725339>
+                                <h2>Signup For Updates</h2></div>
+                        </div>
+                        <div class=bmform_body725339>
+                            <div class=bmform_introtxt725339 id=tdIntro725339>
+                                <p>Signup to My Email List for Updates...Don't Worry, I Hate Spam Too</p>
+                                <br>
+                            </div>
+                            <div id=tblFieldData725339>
+                                <div class="row">
+                                    <div class="col-md-2 col-md-offset-4">
+                                        <div class=bmform_frmtext725339 style="display:inline;">First Name <span style='color:#CC0000;font-size:125%;'> *</span> </div>
+                                        <br>
+                                        <input type=text style="display:inline;" class=bmform_frm725339 name=fldfirstname maxlength=100 />
+                                        <br>
+                                        <br>
+                                        <div class=bmform_frmtext725339 style="display:inline;">Email <span style='color:#CC0000;font-size:125%;'> *</span> </div>
+                                        <br>
+                                        <input type=text class=bmform_frm725339 name=fldEmail style="display:inline;" maxlength=100 />
+                                    </div>
+                                    <div class="col-md-2">
+                                        <div class=bmform_frmtext725339 style="display:inline;">Last Name <span style='color:#2c3e50;font-size:125%;'> *</span></div>
+                                        <br>
+
+                                        <input type=text class=bmform_frm725339 name=fldlastname style="display:inline;" maxlength=100 />
+                                        <br>
+                                        <br>
+                                        <div class=bmform_frmtext725339 style="display:inline;">Affiliation <span style='color:#2c3e50;font-size:125%;'> *</span></div>
+                                        <br>
+                                        <input type=text class=bmform_frm725339 name=fldfield9 style="display:inline;" maxlength=100 />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class=bmform_button725339>
+                                <input type="submit" id="btnSubmit" value="Submit" krydebug="1751" class=bmform_submit725339 />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <!-- END: Signup Form Manual Code from Benchmark Email Ver 2.0 ------>
+
+
     </div>
     <footer id="footer">
-        &copy; James Lepone 2016 | Made Using <a href="http://getbootstrap.com/">Bootstrap</a> and <a href="http://placeit.net/">Placeit</a>
+        &copy; James Lepone 2016 | Made Using <a href="http://getbootstrap.com/">Bootstrap</a> <a href="http://placeit.net/">Placeit</a> and <a href="http://benchmarkemail.com/">Benchmark Email</a>
     </footer>
 </body>
 
