--- a/index.html
+++ b/index.html
@@ -30,71 +30,73 @@
         <h1 id="projtitle">Projects</h1>
         <br>
     </div>
-    <div id="padthisleft">
-        <div id="Project5" class="container-fluid">
-            <div class="row">
-                <div class="col-md-7">
-                    <a href="http://www.jameslepone.com/positivity"><h2>Positivity</h2></a>
-                    <p>Positivity is a website built for uplifting or positive thoughts. Users go on the site and can post uplifting thoughts which are placed on the main page. Users can then like the most uplifting thoughts and they will rise to the top of the page.</p>
-                </div>
-                <div class="col-md-5">
-                    <img src="pospic.jpg">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="padthisbottom"></div>
-    <div id="padthisright">
-        <div id="Project6" class="container-fluid">
-            <div class="row">
-                <div class="col-md-7">
-                    <h2><a href="/diopsys/index.html">Diopsys, Inc. Website Rebuild</h2></a>
-                    <p>This website was used to give new ideas and show some alternatives to Word Press (calendar and blog features) as well as show responsive website development to the company for their new website which is currently under construction. Also, check it out on <a href="https://github.com/Clink123/diopsysrebuild">GitHub</a></p>
-                </div>
-                <div class="col-md-5">
-                    <img id="diopsys" src="diopsys.png">
+    <div id="projects">
+        <div id="padthisleft">
+            <div id="Project" class="container-fluid">
+                <div class="row">
+                    <div class="col-md-5">
+                        <img src="pospic.jpg">
+                    </div>
+                    <div class="col-md-7">
+                        <a href="http://www.jameslepone.com/positivity"><h2>Positivity</h2></a>
+                        <p>Positivity is a website built for uplifting or positive thoughts. Users go on the site and can post uplifting thoughts which are placed on the main page. Users can then like the most uplifting thoughts and they will rise to the top of the page.</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div id="padthisbottom"></div>
-    <div id="padthisleft">
-        <div id="Project2" class="container-fluid">
-            <div class="row">
-                <div class="col-md-5">
-                    <img src="echo.jpg">
-                </div>
-                <div class="col-md-7">
-                    <a href="http://github.com/Clink123/nerdyvalentine/"><h2>Nerdy Valentine Amazon Echo App</h2></a>
-                    <p>An Amazon Alexa app that gives the user a nerdy pickup line when asked. It is based on the Space Facts example program and was my first Amazon Alexa App. This won best application at Code Day 2016 and is currently published on the Alexa Skills store.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="padthisbottom"></div>
-    <div id="padthisright">
-        <div id="Project3" class="container-fluid">
-            <div class="row">
-                <div class="col-md-7">
-                    <a href="http://github.com/Clink123/memorymashup"><h2>Memory Mashup</h2></a>
-                    <p>This is my first ever Arduino Game, which is basically a two player version of the game simon. The players take turns memorizing a pattern of lights and must repeat it. Also, check out the <a href="http://www.jameslepone.com/memorymashup/">instruction website</a>.</p>
-                </div>
-                <div class="col-md-5">
-                    <img id="memmash" src="memmash.png">
+        <div id="padthisbottom"></div>
+        <div id="padthisright">
+            <div id="Project" class="container-fluid">
+                <div class="row">
+                    <div class="col-md-7">
+                        <h2><a href="/diopsys/index.html">Diopsys, Inc. Website Rebuild</h2></a>
+                        <p>This website was used to give new ideas and show some alternatives to Word Press (calendar and blog features) as well as show responsive website development to the company for their new website which is currently under construction. Also, check it out on <a href="https://github.com/Clink123/diopsysrebuild">GitHub</a></p>
+                    </div>
+                    <div class="col-md-5">
+                        <img id="diopsys" src="diopsys.png">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div id="padthisbottom"></div>
-    <div id="padthisleft">
-        <div id="Project4" class="container-fluid">
-            <div class="row">
-                <div class="col-md-5">
-                    <img src="gamesplatform.png">
+        <div id="padthisbottom"></div>
+        <div id="padthisleft">
+            <div id="Project" class="container-fluid">
+                <div class="row">
+                    <div class="col-md-5">
+                        <img src="echo.png">
+                    </div>
+                    <div class="col-md-7">
+                        <a href="http://github.com/Clink123/nerdyvalentine/"><h2>Nerdy Valentine Amazon Echo App</h2></a>
+                        <p>An Amazon Alexa app that gives the user a nerdy pickup line when asked. It is based on the Space Facts example program and was my first Amazon Alexa App. This won best application at Code Day 2016 and is currently published on the Alexa Skills store.</p>
+                    </div>
                 </div>
-                <div class="col-md-7">
-                    <a href="http://github.com/Clink123/arduinogamesplatform"><h2>Arduino Games Platform</h2></a>
-                    <p>A versatile, easy to code and expand game platform which my team and I made 2 games for. People from around the world can build the games platform and record scores on a future web application. The idea of the project was to create an open source game platform in which many different games could be coded on it or added to it. Also, check out the <a href="http://jameslepone.com/gamesplatform/">instruction site</a>.</p>
+            </div>
+        </div>
+        <div id="padthisbottom"></div>
+        <div id="padthisright">
+            <div id="Project" class="container-fluid">
+                <div class="row">
+                    <div class="col-md-7">
+                        <a href="http://github.com/Clink123/memorymashup"><h2>Memory Mashup</h2></a>
+                        <p>This is my first ever Arduino Game, which is basically a two player version of the game simon. The players take turns memorizing a pattern of lights and must repeat it. Also, check out the <a href="http://www.jameslepone.com/memorymashup/">instruction website</a>.</p>
+                    </div>
+                    <div class="col-md-5">
+                        <img id="memmash" src="memmash.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="padthisbottom"></div>
+        <div id="padthisleft">
+            <div id="Project" class="container-fluid">
+                <div class="row">
+                    <div class="col-md-5">
+                        <img src="gamesplatform.png">
+                    </div>
+                    <div class="col-md-7">
+                        <a href="http://github.com/Clink123/arduinogamesplatform"><h2>Arduino Games Platform</h2></a>
+                        <p>A versatile, easy to code and expand game platform which my team and I made 2 games for. People from around the world can build the games platform and record scores on a future web application. The idea of the project was to create an open source game platform in which many different games could be coded on it or added to it. Also, check out the <a href="http://jameslepone.com/gamesplatform/">instruction site</a>.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -104,10 +106,10 @@
         <div class="row" id="problemrow">
             <h2 id="h2tagcontact">Contact</h2>
             <br>
-            <a class="col-md-1 col-md-offset-4" href="mailto:jameslepone@gmail.com"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><p>Mail</p></a>
-            <a class="col-md-1" target="_blank" href="http://www.youtube.com/user/GeminiJets747"><span class="glyphicon glyphicon-expand" aria-hidden="true"></span><p>YouTube</p></a>
-            <a class="col-md-1" target="_blank" href="http://github.com/Clink123/"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span><p>GitHub</p></a>
-            <a class="col-md-1" target="_blank" href="https://resume.creddle.io/resume/dtmmn1ybt1"><span class="glyphicon glyphicon-file" aria-hidden="true"></span><p>Resume</p></a>
+            <a id="contactitem"class="col-md-1 col-md-offset-4" href="mailto:jameslepone@gmail.com"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><p>Mail</p></a>
+            <a id="contactitem"class="col-md-1" target="_blank" href="http://www.youtube.com/user/GeminiJets747"><span class="glyphicon glyphicon-expand" aria-hidden="true"></span><p>YouTube</p></a>
+            <a id="contactitem"class="col-md-1" target="_blank" href="http://github.com/Clink123/"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span><p>GitHub</p></a>
+            <a id="contactitem"class="col-md-1" target="_blank" href="https://resume.creddle.io/resume/dtmmn1ybt1"><span class="glyphicon glyphicon-file" aria-hidden="true"></span><p>Resume</p></a>
         </div>
 
         <!-- BEGIN: Signup Form Manual Code from Benchmark Email Ver 2.0 ------>
@@ -247,7 +249,7 @@
                             </div>
                             <div id=tblFieldData725339>
                                 <div class="row">
-                                    <div class="col-md-2 col-md-offset-4">
+                                    <div class="col-md-3 col-md-offset-3">
                                         <div class=bmform_frmtext725339 style="display:inline;">First Name <span style='color:#CC0000;font-size:125%;'> *</span> </div>
                                         <br>
                                         <input type=text style="display:inline;" class=bmform_frm725339 name=fldfirstname maxlength=100 />
@@ -255,16 +257,16 @@
                                         <br>
                                         <div class=bmform_frmtext725339 style="display:inline;">Email <span style='color:#CC0000;font-size:125%;'> *</span> </div>
                                         <br>
-                                        <input type=text class=bmform_frm725339 name=fldEmail style="display:inline;" maxlength=100 />
+                                        <input type=text class=bmform_frm725339 name=fldEmail style="display:inline;" maxlength=100 /><br><br>
                                     </div>
-                                    <div class="col-md-2">
-                                        <div class=bmform_frmtext725339 style="display:inline;">Last Name <span style='color:#2c3e50;font-size:125%;'> *</span></div>
+                                    <div class="col-md-3">
+                                        <div class=bmform_frmtext725339 style="display:inline;">Last Name <span style='color:#34495e;font-size:125%;'> *</span></div>
                                         <br>
 
                                         <input type=text class=bmform_frm725339 name=fldlastname style="display:inline;" maxlength=100 />
                                         <br>
                                         <br>
-                                        <div class=bmform_frmtext725339 style="display:inline;">Affiliation <span style='color:#2c3e50;font-size:125%;'> *</span></div>
+                                        <div class=bmform_frmtext725339 style="display:inline;">Affiliation <span style='color:#34495e;font-size:125%;'> *</span></div>
                                         <br>
                                         <input type=text class=bmform_frm725339 name=fldfield9 style="display:inline;" maxlength=100 />
                                     </div>
@@ -284,7 +286,7 @@
 
     </div>
     <footer id="footer">
-        &copy; James Lepone 2016 | Made Using <a href="http://getbootstrap.com/">Bootstrap</a> <a href="http://placeit.net/">Placeit</a> and <a href="http://benchmarkemail.com/">Benchmark Email</a>
+        &copy; James Lepone 2016 | Made Using <a href="http://getbootstrap.com/">Bootstrap</a>, <a href="http://placeit.net/">Placeit</a> and <a href="http://benchmarkemail.com/">Benchmark Email</a>
     </footer>
 </body>
 
