index.html changed

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
             <div id="Project" class="container-fluid">
                 <div class="row">
                     <div class="col-md-5">
-                        <img src="gamesplatform.png">
+                        <img src="#">
                     </div>
                     <div class="col-md-7">
-                        <a href="http://github.com/Clink123/arduinogamesplatform"><h2>Arduino Games Platform</h2></a>
-                        <p>A versatile, easy to code and expand game platform which my team and I made 2 games for. People from around the world can build the games platform and record scores on a future web application. The idea of the project was to create an open source game platform in which many different games could be coded on it or added to it. Also, check out the <a href="http://jameslepone.com/gamesplatform/">instruction site</a>.</p>
+                        <a href="https://github.com/Clink123/WCS"><h2>Water Conservation System</h2></a>
+                        <p>The water conservation system is an undersink device used to detect and stop the flow of water. This not only conserves water but can stop a sink from overflowing, causing damage to the home if left running accidentally. The WCS was developed in the Mechatronics Research Lab at The Bergen County Academies and will be attending the 2017 North Jersey Regional Science Fair. Also, check out the <a href="#">instructables</a>.</p>
                     </div>
                 </div>
             </div>
@@ -106,10 +106,10 @@
         <div class="row" id="problemrow">
             <h2 id="h2tagcontact">Contact</h2>
             <br>
-            <a id="contactitem"class="col-md-1 col-md-offset-4" href="mailto:jameslepone@gmail.com"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><p>Mail</p></a>
-            <a id="contactitem"class="col-md-1" target="_blank" href="http://www.youtube.com/user/GeminiJets747"><span class="glyphicon glyphicon-expand" aria-hidden="true"></span><p>YouTube</p></a>
-            <a id="contactitem"class="col-md-1" target="_blank" href="http://github.com/Clink123/"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span><p>GitHub</p></a>
-            <a id="contactitem"class="col-md-1" target="_blank" href="https://resume.creddle.io/resume/dtmmn1ybt1"><span class="glyphicon glyphicon-file" aria-hidden="true"></span><p>Resume</p></a>
+            <a id="contactitem" class="col-md-1 col-md-offset-4" href="mailto:jameslepone@gmail.com"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><p>Mail</p></a>
+            <a id="contactitem" class="col-md-1" target="_blank" href="http://www.youtube.com/user/GeminiJets747"><span class="glyphicon glyphicon-expand" aria-hidden="true"></span><p>YouTube</p></a>
+            <a id="contactitem" class="col-md-1" target="_blank" href="http://github.com/Clink123/"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span><p>GitHub</p></a>
+            <a id="contactitem" class="col-md-1" target="_blank" href="https://resume.creddle.io/resume/dtmmn1ybt1"><span class="glyphicon glyphicon-file" aria-hidden="true"></span><p>Resume</p></a>
         </div>
 
         <!-- BEGIN: Signup Form Manual Code from Benchmark Email Ver 2.0 ------>
@@ -257,7 +257,9 @@
                                         <br>
                                         <div class=bmform_frmtext725339 style="display:inline;">Email <span style='color:#CC0000;font-size:125%;'> *</span> </div>
                                         <br>
-                                        <input type=text class=bmform_frm725339 name=fldEmail style="display:inline;" maxlength=100 /><br><br>
+                                        <input type=text class=bmform_frm725339 name=fldEmail style="display:inline;" maxlength=100 />
+                                        <br>
+                                        <br>
                                     </div>
                                     <div class="col-md-3">
                                         <div class=bmform_frmtext725339 style="display:inline;">Last Name <span style='color:#34495e;font-size:125%;'> *</span></div>
