--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div id="Project" class="container-fluid">
                 <div class="row">
                     <div class="col-md-5">
-                        <img src="#">
+                        <img src="wcs.png">
                     </div>
                     <div class="col-md-7">
                         <a href="https://github.com/Clink123/WCS"><h2>Water Conservation System</h2></a>
