--- a/index.html
+++ b/index.html
@@ -26,17 +26,27 @@
     <div id="about">
         <BR>
         <h1>About Me</h1>
-        <p>I am a student currently attending <a href="http://bcts.bergen.org">Bergen County Academies</a> and I am really passionate about Computer Science. I have learned a few languages and dabbled in some others, as well as attending quite a few hackathons and making some awesome projects along the way. I also love the hardware side of computer science, and I have made a few arduino projects as well! On the hackathon side of things, I am heavily involved in the planning and execution of hackBCA, one of the largest High School hackathons in the northeast.</p>
+        <p>I am a student currently attending <a href="http://bcts.bergen.org">Bergen County Academies</a> and I am really passionate about Computer Science. I have learned a few languages and dabbled in some others, as well as attending quite a few hackathons and making some awesome projects along the way. Check out my projects below!</p>
         <h1 id="projtitle">Projects</h1>
         <br>
     </div>
     <div id="projects">
+        <div id="padthisright">
+            <div id="Project" class="container-fluid">
+                <div class="row">
+                    <div class="col-md-7">
+                        <a href="https://www.hackbca.com"><h2>hackBCA</h2></a>
+                        <p>I am currently one of the directors of hackBCA, a premier high school hackathon that occurs once a year at my school. This year, there will be 400 High School aged students in attendance who will spend 24 hours creating something awesome.</p>
+                    </div>
+                    <div id="hackimg" class="col-md-5"></div>
+                </div>
+            </div>
+        </div>
+        <div id="padthisbottom"></div>
         <div id="padthisleft">
             <div id="Project" class="container-fluid">
                 <div class="row">
-                    <div class="col-md-5">
-                        <img src="pospic.jpg">
-                    </div>
+                    <div id="positivimg" class="col-md-5"></div>
                     <div class="col-md-7">
                         <a href="http://www.jameslepone.com/positivity"><h2>Positivity</h2></a>
                         <p>Positivity is a website built for uplifting or positive thoughts. Users go on the site and can post uplifting thoughts which are placed on the main page. Users can then like the most uplifting thoughts and they will rise to the top of the page.</p>
@@ -49,12 +59,10 @@
             <div id="Project" class="container-fluid">
                 <div class="row">
                     <div class="col-md-7">
-                        <h2><a href="/diopsys/index.html">Diopsys, Inc. Website Rebuild</h2></a>
-                        <p>This website was used to give new ideas and show some alternatives to Word Press (calendar and blog features) as well as show responsive website development to the company for their new website which is currently under construction. Also, check it out on <a href="https://github.com/Clink123/diopsysrebuild">GitHub</a></p>
+                        <a href="https://github.com/Clink123/ladysavantfoundation"><h2>Lady Savant Foundation Website</h2></a>
+                        <p>A website I built for the <a href="http://www.ladysavantfoundation.com">Lady Savant Foundation</a>, a foundation with a new mission each year. This year's mission is to build a school in Cambodia.</p>
                     </div>
-                    <div class="col-md-5">
-                        <img id="diopsys" src="diopsys.png">
-                    </div>
+                    <div id="lsfimg" class="col-md-5"></div>
                 </div>
             </div>
         </div>
@@ -62,12 +70,10 @@
         <div id="padthisleft">
             <div id="Project" class="container-fluid">
                 <div class="row">
-                    <div class="col-md-5">
-                        <img src="echo.png">
-                    </div>
+                    <div id="wcsimg" class="col-md-5"></div>
                     <div class="col-md-7">
-                        <a href="http://github.com/Clink123/nerdyvalentine/"><h2>Nerdy Valentine Amazon Echo App</h2></a>
-                        <p>An Amazon Alexa app that gives the user a nerdy pickup line when asked. It is based on the Space Facts example program and was my first Amazon Alexa App. This won best application at Code Day 2016 and is currently published on the Alexa Skills store.</p>
+                        <a href="https://github.com/Clink123/WCS"><h2>Water Conservation System</h2></a>
+                        <p>The water conservation system is an undersink device used to detect and stop the flow of water. This not only conserves water but can stop a sink from overflowing, causing damage to the home if left running accidentally. The WCS was developed in the Mechatronics Research Lab at The Bergen County Academies and will be attending the 2017 North Jersey Regional Science Fair. Also, check out the <a href="http://www.instructables.com/id/Water-Conservation-System/">instructables</a>.</p>
                     </div>
                 </div>
             </div>
@@ -77,25 +83,21 @@
             <div id="Project" class="container-fluid">
                 <div class="row">
                     <div class="col-md-7">
-                        <a href="http://github.com/Clink123/memorymashup"><h2>Memory Mashup</h2></a>
-                        <p>This is my first ever Arduino Game, which is basically a two player version of the game simon. The players take turns memorizing a pattern of lights and must repeat it. Also, check out the <a href="http://www.jameslepone.com/memorymashup/">instruction website</a>.</p>
+                        <h2><a href="https://signup.bergen.org">BCA Apps</h2></a>
+                        <p>I am currently a working on an assortment of internal signup and request applications for my school. You can check it out on <a href="https://github.com/ATCS-BCA/bca-apps">GitHub</a>.</p>
                     </div>
-                    <div class="col-md-5">
-                        <img id="memmash" src="memmash.png">
-                    </div>
+                    <div id="bcaappsimg" class="col-md-5"></div>
                 </div>
             </div>
         </div>
         <div id="padthisbottom"></div>
-        <div id="padthisleft">
+       <div id="padthisleft">
             <div id="Project" class="container-fluid">
                 <div class="row">
-                    <div class="col-md-5">
-                        <img src="wcs.png">
-                    </div>
+                    <div id="echoimg" class="col-md-5"></div>
                     <div class="col-md-7">
-                        <a href="https://github.com/Clink123/WCS"><h2>Water Conservation System</h2></a>
-                        <p>The water conservation system is an undersink device used to detect and stop the flow of water. This not only conserves water but can stop a sink from overflowing, causing damage to the home if left running accidentally. The WCS was developed in the Mechatronics Research Lab at The Bergen County Academies and will be attending the 2017 North Jersey Regional Science Fair. Also, check out the <a href="#">instructables</a>.</p>
+                        <a href="http://github.com/Clink123/nerdyvalentine/"><h2>Nerdy Valentine Amazon Echo App</h2></a>
+                        <p>An Amazon Alexa app that gives the user a nerdy pickup line when asked. It is based on the Space Facts example program and was my first Amazon Alexa App. This won best application at Code Day 2016 and is currently published on the Alexa Skills store.</p>
                     </div>
                 </div>
             </div>
@@ -244,7 +246,6 @@
                         </div>
                         <div class=bmform_body725339>
                             <div class=bmform_introtxt725339 id=tdIntro725339>
-                                <p>Signup to My Email List for Updates...Don't Worry, I Hate Spam Too</p>
                                 <br>
                             </div>
                             <div id=tblFieldData725339>
@@ -288,7 +289,7 @@
 
     </div>
     <footer id="footer">
-        &copy; James Lepone 2016 | Made Using <a href="http://getbootstrap.com/">Bootstrap</a>, <a href="http://placeit.net/">Placeit</a> and <a href="http://benchmarkemail.com/">Benchmark Email</a>
+        &copy; James Lepone 2016 | Made Using <a href="http://getbootstrap.com/">Bootstrap</a> and <a href="http://benchmarkemail.com/">Benchmark Email</a>
     </footer>
 </body>
 
