--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="row">
                     <div class="col-md-7">
                         <a href="https://www.hackbca.com"><h2>hackBCA</h2></a>
-                        <p>I am currently one of the directors of hackBCA, a premier high school hackathon that occurs once a year at my school. This year, there will be 400 High School aged students in attendance who will spend 24 hours creating something awesome.</p>
+                        <p>I am currently one of the directors at hackBCA, a premier high school hackathon that occurs once a year at my school. This year, there will be 400 High School students in attendance who will spend 24 hours creating something awesome.</p>
                     </div>
                     <div id="hackimg" class="col-md-5"></div>
                 </div>
